--- a/css/app.css
+++ b/css/app.css
@@ -165,7 +165,7 @@ h6 {
 
 .div-footer-card {
   display: flex;
-  margin-top: 40px;
+  margin-top: 30px;
 }
 
 .div-twitch {
@@ -382,3 +382,67 @@ a {
   z-index: 999999;
   width: 120px;
 } 
+
+.date-event span {
+ 
+  opacity: 0.6;
+  font-size: 15px;
+  font-weight: normal;
+}
+
+.title-event span {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.title-event {
+
+  margin: 10px auto;
+}
+
+.transmition-event span {
+  font-size: 14px;
+}
+
+.span-purple {
+  color: #673ab7;
+}
+
+.title-speaker {
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.speaker-event {
+  display: flex;
+}
+
+.speaker-event p:first-child{
+  font-size: 16px;
+  font-weight: 600;
+  margin: auto;
+}
+
+.speaker-event p:nth-child(2){
+  font-size: 12px;
+  opacity: 0.5;
+  margin-bottom: 10px;
+}
+
+.li-yellow {
+  background-color: #ffb44d;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  margin: 5px 10px auto 0px
+}
+
+.text-event {
+  font-size: 14px;
+}
+
+.btn-event {
+  padding: 8px 23px;
+  font-size: 15px;
+  font-weight: 600;
+}
